--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -7,8 +7,27 @@
 </head>
 
 <body>
-    <h1>About Us<h1>
-    <p>Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.</p>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand text-light" href="{%url 'djangoapp:index'%}">American Dealership</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse"type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{%url 'djangoapp:index'%}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{%url 'djangoapp:about'%}">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{%url 'djangoapp:contact'%}"">Contact Us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <h1 class="h1">About Us<h1>
+    <p class="display-4">Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.</p>
 </body>
 
 </html>
