--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="{%url 'djangoapp:about'%}">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{%url 'djangoapp:contact'%}"">Contact Us</a>
+                        <a class="nav-link" href="{%url 'djangoapp:contact'%}">Contact Us</a>
                     </li>
                 </ul>
                 {%if user.is_authenticated %}
@@ -41,12 +41,15 @@
                         <input class="form-control " type="text" placeholder="username" name="username" required>
                     </div>
                     <div class="col-auto">
-                        <input class="form-control " type="password" placeholder="password" name="psw" required>
+                        <input class="form-control " type="password" placeholder="password" name="password" required>
                     </div>
                     <div class="col-auto">
-                        <button class="btn btn-outline-success" type="submit">Log in</button>
+                        <button class="btn btn-success" type="submit">Log in</button>
                     </div>
                 </form>
+                <div class="col-auto">
+                    <a class="btn btn-outline-success" href="{% url 'djangoapp:signup' %}">Sign Up</a>
+                </div>
                 {% endif %}
             </div>
         </nav>
