--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -6,6 +6,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
     <body>
-    <!--Add a registration form here -->
+        <span class="d-block display-2 bg-dark text-white">Sign Up</span>
+        <form action = "{% url 'djangoapp:register' %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="exampleInputEmail1">Username</label>
+              <input type="text" class="form-control" name="username" placeholder="Enter username">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" name="password" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
     </body>
 </html>
