--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -14,6 +14,14 @@
               <input type="text" class="form-control" name="username" placeholder="Enter username">
             </div>
             <div class="form-group">
+                <label for="exampleInputEmail1">First Name</label>
+                <input type="text" class="form-control" name="firstname" placeholder="Enter First Name">
+              </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Last Name</label>
+                <input type="text" class="form-control" name="lastname" placeholder="Enter Last Name">
+            </div>
+            <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
