--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -9,10 +9,87 @@
 
     <body>
 
-    <!--Add a nav bar here -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand text-light" href="{%url 'djangoapp:index'%}">American Dealership</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{%url 'djangoapp:index'%}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{%url 'djangoapp:about'%}">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{%url 'djangoapp:contact'%}">Contact Us</a>
+                    </li>
+                </ul>
+                {%if user.is_authenticated %}
+                <span class="navbar-text my-2 my-lg-0">{{user.username}}</span>
+                <a href="{%url 'djangoapp:logout' %}">Logout</a>
+                {% else %}
+                <form action = "{% url 'djangoapp:login' %}"class="form-inline my-2 my-lg-0" method="post">
+                    {% csrf_token %}
+                    <div class="col-auto">
+                        <input class="form-control " type="text" placeholder="username" name="username" required>
+                    </div>
+                    <div class="col-auto">
+                        <input class="form-control " type="password" placeholder="password" name="password" required>
+                    </div>
+                    <div class="col-auto">
+                        <button class="btn btn-success" type="submit">Log in</button>
+                    </div>
+                </form>
+                <div class="col-auto">
+                    <a class="btn btn-outline-success" href="{% url 'djangoapp:signup' %}">Sign Up</a>
+                </div>
+                {% endif %}
+            </div>
+        </nav>
 
     <!-- Add reviews as cards -->
+        {% if reviews %}
+        {% if user.is_authenticated %}
+            <div style="margin: 10px;">
+                <a class="btn btn-primary" href="{% url 'djangoapp:add_review' dealer_id %}"><b>Write a car review</b></a>
+            </div>
+        {% endif %}
+        <div class="card-columns">
+            {% for review in reviews %}
+                {% if review.car_make %}
+                <div class="card" style="height: 300px; overflow: scroll; overflow-x: hidden;">
+                    <img src="{{MEDIA_URL}}/emoji/{{review.sentiment}}.png" class="card-img-left" style="float: left; height: 40px; width: 40px; display: inline-block;">
+                    <div class="card-body" style="text-align: center;">
+                        <h5 class="card-title" style="display: inline-block;">{{ review.car_make }}, {{ review.car_model }}</h5>
+                        <h5 class="card-title">{{ review.car_year }}</h5>
+                        <p class="card-text" style="text-align: left;">{{ review.review }}</p>
+                    </div>
+                </div>
+                <!-- some review data may be missing , using default values-->
+                {% else %}
+                <div class="card" style="height: 300px; overflow: scroll; overflow-x: hidden;">
+                    <img src="{{MEDIA_URL}}/emoji/{{review.sentiment}}.png" class="card-img-left" style="float: left; height: 40px; width: 40px; display: inline-block;">
+                    <div class="card-body" style="text-align: center;">
+                        <h5 class="card-title" style="display: inline-block;">Review</h5>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text" style="text-align: left;">{{ review.review }}</p>
+                    </div>
+                </div>
+                {% endif %}
+            {% endfor %}
+        </div>
 
+    {% else %}
+        <p></br>There are no reviews for this dealership.</br></p>
+        {% if user.is_authenticated %}
+            <div style="margin: 10px;">
+                <a class="btn btn-primary" href="{% url 'djangoapp:add_review' dealer_id %}"><b>Write a car review</b></a>
+            </div>
+        {% endif %}
+    {% endif %}
+    {% endblock %}
     </body>
 
 </html>
